<resources>
    <string name="app_name">TaskManagerProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_have_tasks">You Dont Have Any Tasks!</string>

    <string name="edittext_username">Username</string>
    <string name="edittext_password">Password</string>
    <string name="button_log_in">Log in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_signup">Sign up</string>
    <string name="edittext_signup_username">Username</string>
    <string name="edittext_signup_password">Password</string>

    <string name="empty_edittext_password">The item password cannot be empty</string>
    <string name="empty_edittext_username">The item username cannot be empty</string>
    <string name="invalid_info">Your information is not valid</string>
    <string name="valid_info">You are LOG IN now</string>
    <string name="button_todo">TODO</string>
    <string name="button_doing">DOING</string>
    <string name="button_done">DONE</string>
    <string name="item_log_out">LogOut</string>
    <string name="item_delete_all">DeleteAll</string>
    <string name="item_search">Search</string>

    <string name="send_report">send task report</string>
    <string name="task_report">%1$s! %2$s. The task is in %3$s state.
        Also the task saved on %4$s.</string>
    <string name="task_without_discription">There is no discription</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>