<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_menu"
        android:title="@string/item_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/item_delete_all"
        android:icon="@drawable/ic_trash_menu"
        android:title="@string/item_delete_all"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_log_out"
        android:icon="@drawable/ic_account_menu"
        android:title="@string/item_log_out"
        app:showAsAction="ifRoom|withText" />

</menu>