<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragments.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="353dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:backgroundTint="#FDEDED"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittxt_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/edittext_username"
                android:padding="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="24"
                app:errorEnabled="true"
                app:helperText="*Required">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittxt_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_password"
                android:padding="10dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/btn_log_in"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/button_log_in"
                android:textColor="@android:color/background_light"
                android:backgroundTint="#DC2A2A"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#DC2A2A"
                android:layout_marginTop="2dp"
                android:text="@string/button_sign_up" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</FrameLayout>